typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            57,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts:4:5
  |
4 | var BOOLEAN: boolean;
  |     ^^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            78,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts:5:5
  |
5 | var NUMBER: number;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts:6:5
  |
6 | var STRING: string;
  |     ^^^^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            112,
        ),
        hi: BytePos(
            118,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts:7:5
  |
7 | var OBJECT: Object;
  |     ^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            512,
        ),
        hi: BytePos(
            521,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorWithSecondOperandNumberType.ts:25:7
   |
25 | ANY = undefined, NUMBER;
   |       ^^^^^^^^^

